--- a/projects-lists.html
+++ b/projects-lists.html
@@ -89,19 +89,19 @@
                         </li>
                         <li class="nav-item border-right" @click="projectsPage.activeList = 'youthEmpowerment'"
                             :class="[projectsPage.activeList == 'youthEmpowerment' ? 'active' : '']">
-                            <a class="nav-link py-0 px-4 text-uppercase" href="#">{{tr.key_0.slice(0, 15)}}</a>
+                            <a class="nav-link py-0 px-4 text-uppercase" href="#">{{tr.key_0}}</a>
                         </li>
                         <li class="nav-item border-right" @click="projectsPage.activeList = 'youthParticipation'"
                             :class="[projectsPage.activeList == 'youthParticipation' ? 'active' : '']">
-                            <a class="nav-link py-0 px-4 text-uppercase" href="#">{{tr.key_1.slice(0, 15)}}</a>
+                            <a class="nav-link py-0 px-4 text-uppercase" href="#">{{tr.key_1}}</a>
                         </li>
                         <li class="nav-item border-right" @click="projectsPage.activeList = 'capacity'"
                             :class="[projectsPage.activeList == 'capacity' ? 'active' : '']">
-                            <a class="nav-link py-0 px-4 text-uppercase" href="#">{{tr.key_2.slice(0, 15)}}</a>
+                            <a class="nav-link py-0 px-4 text-uppercase" href="#">{{tr.key_2}}</a>
                         </li>
                         <li class="nav-item border-right" @click="projectsPage.activeList = 'socialDevelopment'"
                             :class="[projectsPage.activeList == 'socialDevelopment' ? 'active' : '']">
-                            <a class="nav-link py-0 px-4 text-uppercase" href="#">{{tr.key_3.slice(0, 15)}}</a>
+                            <a class="nav-link py-0 px-4 text-uppercase" href="#">{{tr.key_3}}</a>
                         </li>
                     </ul>
                 </div>
@@ -123,7 +123,7 @@
                                 <li class="nav-item" @click="projectsPage.activeList = 'youthEmpowerment'"
                                     :class="[projectsPage.activeList == 'youthEmpowerment' ? 'active' : '']">
                                     <a class="nav-link py-3 px-4 text-uppercase"
-                                        :class="[projectsPage.activeList == 'youthEmpowerment' ? 'text-red' : 'text-dark']">{{tr.key_0}</a>
+                                        :class="[projectsPage.activeList == 'youthEmpowerment' ? 'text-red' : 'text-dark']">{{tr.key_0}}</a>
                                 </li>
 
                                 <li class="nav-item" @click="projectsPage.activeList = 'youthParticipation'"
