--- a/registration.html
+++ b/registration.html
@@ -1236,11 +1236,7 @@
                                                     req="true"></textarea>
                                             </div>
                                         </div>
-                                        <div class="section-title mt-0 mt-md-4 mx-1 px-3 mx-md-0">
-                                            <h5 class="text-uppercase m-0 text-dark">
-                                                <small>{{tr.ideaInformation}}</small>
-                                            </h5>
-                                        </div>
+
                                         <div class="form-row custom-row">
                                             <div class="col-12 custom-input">
                                                 <textarea name="" rows="6" req="true" id="about_you"
@@ -1828,7 +1824,7 @@
                                         </div>
                                         <div class="form-row custom-row">
                                             <div class="col-12">
-                                                <button @click="postRegister('#validated-form')"
+                                                <button @click="postRegisters('#validated-form')"
                                                     class="btn bg-red bg-reds text-uppercase custom-btn rounded-0"
                                                     type="button">{{tr.register_btn}}
                                                 </button>
